# MatrixBIN

matrix/: bessel-kiss.tgz  devdrvd.tgz  libpack.tgz
matrix/bessel-kiss/: cjson.tgz
matrix/bessel-kiss/cjson/: conf_pub.c  example.cc
matrix/bessel-kiss/mdb/: Makefile  Matrix регистры Modbus.xlsx  main.c  mdb.c  mdb.h  mdb_db.c  mqtt_thread.c  prot.h  prot4.txt  prot4a-append.txt  prot4a.txt  readme.txt  serialize.c  sock_stuff.c  tcp_thread.c  ПеременныеMatrix.md
matrix/devdrvd/: .gitignore  AUTHORS  Makefile  devdrvd  startDrvd.bat  static.conf
matrix/install_tmp/: add_com_port.txt  matrixlib_setup.sh
matrix/libpack/: .gitignore  DEPENDENCIES  Makefile  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
matrix/libpack/include/: crc16.h
matrix/libpack/src/: Makefile  Makefile.am  Makefile.in  crc16.lo  devdrvd_communication.c  devdrvd_communication.lo  Копия (1) Makefile
matrix/libpack/src/.deps/: crc16.Plo  devdrvd_communication.Plo
matrix/matrixlib/: Makefile  a.c  a.out  calculate_weight.c  cargo_receiving_device.hpp  interface_matrixlib.h  is_motion.c  load_configuration.c  matrixlib.c  matrixlib.so.sig  matrixlib.sum  measuring_channel.hpp  mode_x10.c  normalize_weight.c  platform.hpp  print.c  processing_cur_measurement.c  reset_to_factory.c  save_calibration.c  save_configuration.c  save_results.c  set_calibrate_gane.c  set_calibrate_zero.c  set_calibrate_zero_correction.c  set_channel_on_off.c  set_dec_point.c  set_increment_size.c  set_linearization.c  set_maximum.c  set_minimum.c  set_warm_up_time.c  set_wim_max_platform.c  set_wim_min_capacity.c  set_wim_min_train_mass.c  set_zero_initial_range.c  set_zero_manual_range.c  switch_unit.c  tare_auto_clear.c  tare_auto_set.c  tare_restore.c  (+4 more)
matrix/matrixlib_cc/: Makefile  Matrix_lib.sum  a.cc  a.out  add_scale.cc  filtering_perform.cc  get_tac.cc  interface_matrixlib.h  lib_version.cc  load_configuration.cc  load_receptor.hpp  matrixlib.cc  matrixlib.sum  measuring_channel.hpp  mode_x10.cc  normalize_weight.cc  platform.hpp  print.cc  processing_cur_measurement.cc  readme.txt  set_averag_time.cc  set_calibrate_gane.cc  set_calibrate_zero.cc  set_calibrate_zero_correction.cc  set_discret.cc  set_maximum.cc  set_maximum_channel.cc  set_minimum.cc  set_range_mode.cc  set_wim_adjusment.cc  set_wim_max_capacity.cc  set_wim_max_speed.cc  set_wim_max_train_mass.cc  set_wim_max_transit_speed.cc  set_wim_max_wagon_mass.cc  set_wim_min_platform.cc  set_wim_min_speed.cc  set_wim_min_wagon_mass.cc  set_zero_indication.cc  set_zero_initial_range.cc  (+16 more)
matrix/postgreSQL/: Makefile  a.c  a.out  interface_scales.h  postgreSQL_scales.c
(+149 files in other folders)
